Documentation edits made through Mintlify web editor

--- a/essentials/code.mdx
+++ b/essentials/code.mdx
@@ -4,7 +4,7 @@ description: 'Display inline code and code blocks'
 icon: 'code'
 ---
 
-## Basic - TESTING 
+## Basic - TESTING 2
 
 ### Inline Code
 
