--- a/introduction.mdx
+++ b/introduction.mdx
@@ -1,6 +1,6 @@
 ---
-title: Introduction
-description: "Welcome to the home of your new documentation"
+title: Diana Lakatos
+description: "Documentation Specialist"
 ---
 
 <img
