--- a/introduction.mdx
+++ b/introduction.mdx
@@ -1,6 +1,6 @@
 ---
 title: Diana Lakatos
-description: "Documentation Specialist"
+description: "Documentation Expert"
 ---
 
 <img
@@ -14,24 +14,20 @@ description: "Documentation Specialist"
   alt="Hero Dark"
 />
 
-## Setting up
-
-The first step to world-class documentation is setting up your editing environments.
-
 <CardGroup cols={2}>
   <Card
-    title="Edit Your Docs"
+    title="About me"
     icon="pen-to-square"
     href="https://mintlify.com/docs/quickstart"
   >
-    Get your docs set up locally for easy development
+    Explore my professional background, volunteer work, and areas of interest.
   </Card>
   <Card
-    title="Preview Changes"
+    title="Publications"
     icon="image"
     href="https://mintlify.com/docs/development"
   >
-    Preview your changes before you push to make sure they're perfect
+    Explore a curated collection of my writings. 
   </Card>
 </CardGroup>
 
