--- a/introduction.mdx
+++ b/introduction.mdx
@@ -5,12 +5,12 @@ description: "Documentation Expert"
 
 <img
   className="block dark:hidden"
-  src="/images/hero-light.svg"
+  src="/images/hero-light.jpg"
   alt="Hero Light"
 />
 <img
   className="hidden dark:block"
-  src="/images/hero-dark.svg"
+  src="/images/hero-dark.jpg"
   alt="Hero Dark"
 />
 
