--- a/work-experience/documentation.mdx
+++ b/work-experience/documentation.mdx
@@ -5,7 +5,7 @@ description: "On this page, I've compiled my work experiences related to documen
 
 On this page, I've compiled my work experiences related to documentation. This collection showcases a variety of roles in technical writing, documentation, and educational content creation, offering a detailed view of my professional journey.
 
-## <img src="/images/logos/cleverbridge_logo.jpg" alt="Cleverbridge Logo" width="24" height="24" style="vertical-align: middle; margin-right: 8px;" /> Cleverbridge
+## ![Cleverbridge Logo](/images/logos/cleverbridge_logo.jpg) Cleverbridge
 
 ### Technical Documentation Lead 
 *May 2024 - Present* 
