--- a/work-experience/documentation.mdx
+++ b/work-experience/documentation.mdx
@@ -3,9 +3,11 @@ title: "Documentation"
 description: "On this page, I've compiled my work experiences related to documentation."
 ---
 
+import LogoHeading from "../components/LogoHeading";
+
 On this page, I've compiled my work experiences related to documentation. This collection showcases a variety of roles in technical writing, documentation, and educational content creation, offering a detailed view of my professional journey.
 
-## ![Cleverbridge Logo](/images/logos/cleverbridge_logo.jpg) Cleverbridge
+## <LogoHeading src="/images/logos/cleverbridge_logo.jpg" alt="Cleverbridge Logo" text="Cleverbridge" />
 
 ### Technical Documentation Lead 
 *May 2024 - Present* 
