--- a/welcome.mdx
+++ b/welcome.mdx
@@ -34,7 +34,7 @@ description: "Documentation Expert"
 
 ## Make it yours
 
-Update your docs to your brand and add valuable content for the best user conversion.
+Testing if it will update 
 
 <CardGroup cols={2}>
   <Card
