Documentation edits made through Mintlify web editor

--- a/work-experience/documentation.mdx
+++ b/work-experience/documentation.mdx
@@ -7,7 +7,7 @@ import LogoHeading from "../components/LogoHeading";
 
 On this page, I've compiled my work experiences related to documentation. This collection showcases a variety of roles in technical writing, documentation, and educational content creation, offering a detailed view of my professional journey.
 
-## <LogoHeading src="/images/logos/cleverbridge_logo.jpg" alt="Cleverbridge Logo" text="Cleverbridge" />
+<LogoHeading src="/images/logos/cleverbridge_logo.jpg" alt="Cleverbridge Logo" text="Cleverbridge" />
 
 ### Technical Documentation Lead 
 *May 2024 - Present* 
