Documentation edits made through Mintlify web editor

--- a/work-experience/documentation.mdx
+++ b/work-experience/documentation.mdx
@@ -3,7 +3,7 @@ title: "Documentation"
 description: "On this page, I've compiled my work experiences related to documentation."
 ---
 
-import LogoHeading from "../components/LogoHeading";
+import LogoHeading from "./components/LogoHeading";
 
 On this page, I've compiled my work experiences related to documentation. This collection showcases a variety of roles in technical writing, documentation, and educational content creation, offering a detailed view of my professional journey.
 
