Documentation edits made through Mintlify web editor

--- a/work-experience/documentation.mdx
+++ b/work-experience/documentation.mdx
@@ -9,6 +9,14 @@ On this page, I've compiled my work experiences related to documentation. This c
 
 <LogoHeading src="/images/logos/cleverbridge_logo.jpg" alt="Cleverbridge Logo" text="Cleverbridge" />
 
+<Card 
+  title="Cleverbridge" 
+  img="/images/logos/cleverbridge_logo.jpg" 
+  horizontal={true}
+>
+  Cleverbridge
+</Card>
+
 ### Technical Documentation Lead 
 *May 2024 - Present* 
 *Cologne, Germany (remote)*
