Documentation edits made through Mintlify web editor

--- a/work-experience/documentation.mdx
+++ b/work-experience/documentation.mdx
@@ -11,11 +11,12 @@ On this page, I've compiled my work experiences related to documentation. This c
 
 <Card 
   title="Cleverbridge" 
-  img="/images/logos/cleverbridge_logo.jpg" 
-  horizontal={true}
+  img="/images/logos/cleverbridge_logo.jpg"
+  horizontal
 >
   Cleverbridge
 </Card>
+
 
 ### Technical Documentation Lead 
 *May 2024 - Present* 
