Documentation edits made through Mintlify web editor

--- a/work-experience/documentation.mdx
+++ b/work-experience/documentation.mdx
@@ -3,11 +3,12 @@ title: "Documentation"
 description: "On this page, I've compiled my work experiences related to documentation."
 ---
 
-import LogoHeading from "/components/LogoHeading";
-
 On this page, I've compiled my work experiences related to documentation. This collection showcases a variety of roles in technical writing, documentation, and educational content creation, offering a detailed view of my professional journey.
 
-<LogoHeading src="/images/logos/cleverbridge_logo.jpg" alt="Cleverbridge Logo" text="Cleverbridge" />
+<div style={{ display: "flex", alignItems: "center", gap: "10px" }}>
+  <img src="/images/logos/cleverbridge_logo.jpg" alt="Cleverbridge Logo" width="24" height="24" />
+  <h2 style={{ margin: 0 }}>Cleverbridge</h2>
+</div>
 
 ### Technical Documentation Lead 
 *May 2024 - Present* 
