Documentation edits made through Mintlify web editor

--- a/work-experience/documentation.mdx
+++ b/work-experience/documentation.mdx
@@ -3,7 +3,7 @@ title: "Documentation"
 description: "On this page, I've compiled my work experiences related to documentation."
 ---
 
-On this page, I've compiled my work experiences related to documentation. This collection showcases a variety of roles in technical writing, documentation, and educational content creation, offering a detailed view of my professional journey.
+This collection showcases a variety of roles in technical writing, documentation, and educational content creation, offering a detailed view of my professional journey.
 
 <div style={{ display: "flex", alignItems: "center", gap: "10px" }}>
   <img 
@@ -15,7 +15,6 @@ On this page, I've compiled my work experiences related to documentation. This c
   />
   <h2 style={{ margin: 0 }}>Cleverbridge</h2>
 </div>
-
 
 ### Technical Documentation Lead 
 *May 2024 - Present* 
