Documentation edits made through Mintlify web editor

--- a/work-experience/documentation.mdx
+++ b/work-experience/documentation.mdx
@@ -11,9 +11,9 @@ This collection showcases a variety of roles in technical writing, documentation
     alt="Cleverbridge Logo" 
     width="32" 
     height="32" 
-    style={{ borderRadius: "8px" }} 
+    style={{ borderRadius: "8px", verticalAlign: "middle" }} 
   />
-  <h2 style={{ margin: 0 }}>Cleverbridge</h2>
+  <h2 style={{ margin: 0, padding: 0 }}>Cleverbridge</h2>
 </div>
 
 ### Technical Documentation Lead 
