--- a/work-experience/documentation.mdx
+++ b/work-experience/documentation.mdx
@@ -15,6 +15,7 @@ This collection showcases a variety of roles in technical writing, documentation
   />
   <h2 style={{ margin: 0, padding: 0 }}>Cleverbridge</h2>
 </div>
+Cleverbridge is a global subscription and billing platform that empowers digital businesses with automated payment processing, compliance management, and customer retention solutions. It helps companies scale revenue, optimize customer experiences, and simplify global transactions.
 
 ### Technical Documentation Lead 
 *May 2024 - Present* 
