--- a/work-experience/documentation.mdx
+++ b/work-experience/documentation.mdx
@@ -13,8 +13,9 @@ This collection showcases a variety of roles in technical writing, documentation
     height="32" 
     style={{ borderRadius: "8px", verticalAlign: "middle" }} 
   />
-  <h2 style={{ margin: 0, padding: 0 }}>Cleverbridge</h2>
+  <h2 style={{ margin: 0, padding: 0, marginBottom: "4px" }}>Cleverbridge</h2>
 </div>
+
 Cleverbridge is a global subscription and billing platform that empowers digital businesses with automated payment processing, compliance management, and customer retention solutions. It helps companies scale revenue, optimize customer experiences, and simplify global transactions.
 
 ### Technical Documentation Lead 
