Documentation edits made through Mintlify web editor

--- a/work-experience/documentation.mdx
+++ b/work-experience/documentation.mdx
@@ -5,16 +5,16 @@ description: "On this page, I've compiled my work experiences related to documen
 
 This collection showcases a variety of roles in technical writing, documentation, and educational content creation, offering a detailed view of my professional journey.
 
-<div style={{ display: "flex", alignItems: "center", gap: "10px" }}>
-  <img 
-    src="/images/logos/cleverbridge_logo.jpg" 
-    alt="Cleverbridge Logo" 
-    width="32" 
-    height="32" 
-    style={{ borderRadius: "8px", verticalAlign: "middle" }} 
-  />
-  <h2 style={{ margin: 0, padding: 0, marginBottom: "4px" }}>Cleverbridge</h2>
-</div>
+## <img 
+  src="/images/logos/cleverbridge_logo.jpg" 
+  alt="Cleverbridge Logo" 
+  width="32" 
+  height="32" 
+  style="border-radius: 8px; vertical-align: middle; margin-right: 8px;"
+/> Cleverbridge
+
+Cleverbridge is a global subscription and billing platform that empowers digital businesses with automated payment processing, compliance management, and customer retention solutions. It helps companies scale revenue, optimize customer experiences, and simplify global transactions.
+
 
 Cleverbridge is a global subscription and billing platform that empowers digital businesses with automated payment processing, compliance management, and customer retention solutions. It helps companies scale revenue, optimize customer experiences, and simplify global transactions.
 
