Documentation edits made through Mintlify web editor

--- a/work-experience/documentation.mdx
+++ b/work-experience/documentation.mdx
@@ -5,6 +5,8 @@ description: "On this page, I've compiled my work experiences related to documen
 
 This collection showcases a variety of roles in technical writing, documentation, and educational content creation, offering a detailed view of my professional journey.
 
+## Cleverbridge
+
 ## <img 
   src="/images/logos/cleverbridge_logo.jpg" 
   alt="Cleverbridge Logo" 
