Documentation edits made through Mintlify web editor

--- a/work-experience/documentation.mdx
+++ b/work-experience/documentation.mdx
@@ -3,7 +3,7 @@ title: "Documentation"
 description: "On this page, I've compiled my work experiences related to documentation."
 ---
 
-This collection showcases a variety of roles in technical writing, documentation, and educational content creation, offering a detailed view of my professional journey.
+This collection showcases a variety of roles in technical writing, documentation, and educational content creation, offering a detailed view of my professional journey. TESTING
 
 ## Cleverbridge
 
@@ -14,9 +14,6 @@ This collection showcases a variety of roles in technical writing, documentation
   height="32" 
   style="border-radius: 8px; vertical-align: middle; margin-right: 8px;"
 /> Cleverbridge
-
-Cleverbridge is a global subscription and billing platform that empowers digital businesses with automated payment processing, compliance management, and customer retention solutions. It helps companies scale revenue, optimize customer experiences, and simplify global transactions.
-
 
 Cleverbridge is a global subscription and billing platform that empowers digital businesses with automated payment processing, compliance management, and customer retention solutions. It helps companies scale revenue, optimize customer experiences, and simplify global transactions.
 
